WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271991
Fix typo Registeration -> Registration
https://bugs.webkit.org/show_bug.cgi?id=271991
Summary
Fix typo Registeration -> Registration
pascoe@apple.com
Reported
2024-04-01 13:36:03 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2024-04-01 13:37:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26694
pascoe@apple.com
Comment 2
2024-04-01 13:38:22 PDT
rdar://122321639
Radar WebKit Bug Importer
Comment 3
2024-04-01 13:38:31 PDT
<
rdar://problem/125736460
>
EWS
Comment 4
2024-04-01 21:00:09 PDT
Committed
276921@main
(6a733f6db175): <
https://commits.webkit.org/276921@main
> Reviewed commits have been landed. Closing PR #26694 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug