Fix typo Registeration -> Registration https://bugs.webkit.org/show_bug.cgi?id=271991 rdar://122321639

Reviewed by Chris Dumez and Justin Michaud.

This patch fixes typos of the form Registeration -> Registration.

* Source/JavaScriptCore/runtime/TZoneInit.cpp:
(TZoneRegistrationDone):
(TZoneRegisterationDone): Deleted.
* Source/JavaScriptCore/runtime/TZoneInit.h:
* Source/WebKit/Shared/API/Cocoa/WKMain.mm:
(WKXPCServiceMain):
* Source/WebKit/UIProcess/WebAuthentication/WebAuthenticatorCoordinatorProxy.h:

Canonical link: https://commits.webkit.org/276921@main